# Yahtzee

./: .gitignore  CMakeLists.txt  game.c  game.h  game_tui.c  game_tui.h  main.c  main.h  tui.c  tui.h  utils.c  utils.h
include/: basic_tui.h  game.h  game_tui.h  tui.h
src/: ai.c  basic_tui.c  game.c  game_tui.c  tui.c
testing/: testing.c  testing.h
yahtzee/: ai.c  ai.h  game.c  game.h  run.sh  testing.c  testing.h
